// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`copyToClipboard matches snapshot 1`] = `
<Fragment>
  <div>
    <input
      aria-hidden={true}
      className="input"
      readOnly={true}
      style={
        {
          "height": "1px",
          "opacity": 0,
          "position": "absolute",
          "width": "1px",
        }
      }
      tabIndex={-1}
      value="text"
    />
    <CustomizedIconButton
      ariaLabel="common.maskedCopyableTextField.copy.label"
      componentRef={
        {
          "current": null,
        }
      }
      iconProps={
        {
          "iconName": "copy",
        }
      }
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    />
  </div>
</Fragment>
`;

exports[`copyToClipboard matches snapshot disabled 1`] = `
<Fragment>
  <div>
    <input
      aria-hidden={true}
      className="input"
      disabled={true}
      readOnly={true}
      style={
        {
          "height": "1px",
          "opacity": 0,
          "position": "absolute",
          "width": "1px",
        }
      }
      tabIndex={-1}
      value="text"
    />
    <CustomizedIconButton
      ariaLabel="common.maskedCopyableTextField.copy.label"
      componentRef={
        {
          "current": null,
        }
      }
      iconProps={
        {
          "iconName": "copy",
        }
      }
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    />
  </div>
</Fragment>
`;
